# proj_self_evol_ai

./: DEPLOYMENT_GUIDE.md  Dockerfile.mlflow  EVALUATION.md  LICENSE  PERFORMANCE_REPORT.md  README.md  SYSTEM_MANUAL.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
auto_fine_tuning/: drift_detector.py  lora_finetuner.py
auto_quantization/: gptq_quantizer.py  model_analyzer.py
auto_rl/: orchestrator.py
config/: config.py  config.yaml
data/: dummy_dataset.txt  dummy_documents.txt  new_data.csv  reference_data.csv
docker/: deepspeed.Dockerfile  pytorch.Dockerfile  rllib.Dockerfile
docs/: Auto_evolving_agents_Project_plan.docx  Documentation.docx  Functional_Specification_Document.docx  ~$nctional_Specification_Document.docx
dynamic_context/: rag_baseline.py
lora_model_integrated/: README.md  adapter_config.json  adapter_model.safetensors
mlruns/0/: meta.yaml
orchestrator/: main_orchestrator.py
src/self_evolving_agent/auto_fine_tuning/: drift_detector.py  lora_finetuner.py
src/self_evolving_agent/auto_quantization/: gptq_quantizer.py  model_analyzer.py
src/self_evolving_agent/auto_rl/: orchestrator.py
src/self_evolving_agent/dynamic_context/: rag_baseline.py
src/self_evolving_agent/orchestrator/: main_orchestrator.py
tests/: test_modules.py
